# Taller-Programacion-I-1C-2020

./: .gitignore  README.md
PrimeraEntrega2dir/: CMakeLists.txt  main.cpp
PrimeraEntrega2dir/data/: config_default.json
PrimeraEntrega2dir/src/controller/: CartelNivelControlador.cpp  CartelNivelControlador.h  JuegoControlador.cpp  JuegoControlador.h
PrimeraEntrega2dir/src/model/: CartelNivel.cpp  CartelNivel.h  Colisionador.cpp  Colisionador.h  Enemigo.cpp  Enemigo.h  Juego.cpp  Juego.h  Nivel.cpp  Nivel.h  Personaje.cpp  Personaje.h  Posicion.cpp  Posicion.h  Ventana.cpp
PrimeraEntrega2dir/src/model/estado_enemigo/: EnemigoInactivo.cpp  EnemigoInactivo.h  EnemigoQuieto.h  EstadoEnemigo.h
PrimeraEntrega2dir/src/model/estado_personaje/: PersonajeQuieto.cpp
PrimeraEntrega2dir/src/tools/: CargadorDeConfiguracion.cpp  CargadorDeConfiguracion.h  Constantes.cpp  Constantes.h  Log.cpp  Log.h  ParserEstadoJuego.cpp  SDL_Utils.cpp  SDL_Utils.h  Utils.cpp
PrimeraEntrega2dir/src/view/: CargadorTexturasEnemigos.cpp  CargadorTexturasEnemigos.h  CartelNivelVista.cpp  CartelNivelVista.h  EnemigoVista.cpp  EnemigoVista.h  FondoVista.cpp  FondoVista.h  JuegoVista.cpp  JuegoVista.h  NivelVista.cpp  NivelVista.h  PersonajeVista.cpp  PersonajeVista.h
Pruebas/TerceraEntregaExtra/Cliente/: CMakeLists.txt
Pruebas/TerceraEntregaExtra/Servidor/: CMakeLists.txt
SegundaEntrega/Cliente/: CMakeLists.txt  main.cpp
SegundaEntrega/Cliente/data/: config_default.json
SegundaEntrega/Cliente/src/controlador/: CartelControlador.cpp  CartelControlador.h  ControladorCliente.cpp  ControladorCliente.h  JuegoControlador.cpp  JuegoControlador.h  MenuJuegoControlador.cpp  MenuJuegoControlador.h  MenuLogControlador.cpp  MenuLogControlador.h
SegundaEntrega/Cliente/src/hilos/: ColaProtegida.h  HiloEnviar.h  HiloRecibir.h
SegundaEntrega/Cliente/src/modelo/: Cartel.cpp  Cartel.h  Cliente.cpp  Cliente.h  MenuJuego.cpp  MenuJuego.h  MenuLog.cpp  MenuLog.h
SegundaEntrega/Cliente/src/tools/: CargadorDeConfiguracion.cpp  CargadorDeConfiguracion.h  Constantes.cpp  Constantes.h  Log.cpp  Log.h  ParserEstadoJuego.h  SDL_Utils.cpp  SDL_Utils.h  Utils.cpp  Utils.h
SegundaEntrega/Cliente/src/vista/: CargadorTexturasEnemigos.cpp  CargadorTexturasEnemigos.h  CargadorTexturasPersonajes.cpp  CargadorTexturasPersonajes.h  CartelVista.cpp  CartelVista.h  EnemigoVista.cpp  EnemigoVista.h  FondoVista.cpp  FondoVista.h  JuegoVista.cpp  JuegoVista.h  MenuJuegoVista.cpp  MenuJuegoVista.h  MenuLogVista.cpp  MenuLogVista.h  NivelVista.cpp  NivelVista.h  PersonajeVista.cpp  PersonajeVista.h  TextoSDL.cpp  TextoSDL.h
SegundaEntrega/Servidor/: CMakeLists.txt  main.cpp
SegundaEntrega/Servidor/data/: config_default.json
SegundaEntrega/Servidor/src/controlador/: ControladorServidor.cpp  ControladorServidor.h  JuegoControlador.cpp  JuegoControlador.h
SegundaEntrega/Servidor/src/hilos/: ColaProtegida.h  Hilo.h  HiloAceptador.cpp  HiloAceptador.h  HiloEnviar.cpp  HiloEnviar.h  HiloRecibir.cpp  HiloRecibir.h
SegundaEntrega/Servidor/src/modelo/: Cliente.cpp  Cliente.h  Colisionador.cpp  Colisionador.h  Enemigo.cpp  Enemigo.h  Juego.cpp  Juego.h  Nivel.cpp  Nivel.h  Personaje.cpp  Personaje.h  Posicion.cpp  Posicion.h  Servidor.cpp  Servidor.h  Ventana.h
SegundaEntrega/Servidor/src/modelo/estado_enemigo/: EnemigoQuieto.cpp
SegundaEntrega/Servidor/src/modelo/estado_personaje/: EstadoPersonaje_I.h  PersonajeMoviendose.cpp  PersonajeMoviendose.h  PersonajeQuieto.h
SegundaEntrega/Servidor/src/tools/: CargadorDeConfiguracion.cpp  CargadorDeConfiguracion.h  Constantes.cpp  Constantes.h  Log.h  SDL_Utils.cpp  SDL_Utils.h  Utils.cpp  Utils.h
TerceraEntrega/TP3_Cliente/: CMakeLists.txt
TerceraEntrega/TP3_Cliente/data/: config_default.json
TerceraEntrega/TP3_Cliente/src/controlador/: ControladorCliente.cpp  ControladorCliente.h  JuegoControlador.cpp  JuegoControlador.h
TerceraEntrega/TP3_Cliente/src/hilos/: HiloEnviar.h
TerceraEntrega/TP3_Cliente/src/modelo/: Cartel.cpp  Cliente.cpp  Cliente.h  MenuJuego.cpp  MenuLog.cpp  MenuLog.h
TerceraEntrega/TP3_Cliente/src/tools/: ConstantesComunicacion.h  ConstantesEfectos.h  ConstantesEnemigo.h  ConstantesLog.h  ConstantesMensajes.h  ConstantesMusica.h  ConstantesTeclas.h  ConstantesVentana.h
TerceraEntrega/TP3_Cliente/src/vista/: BarraVidaVista.h  CargadorTexturasEfectos.cpp  CargadorTexturasEnemigos.cpp  CargadorTexturasEnemigos.h  CargadorTexturasPersonajes.cpp  CargadorTexturasProyectiles.h  CartelVista.cpp  EfectoEscudoVista.cpp  EfectoExplosionEnemigoVista.cpp  EfectoExplosionEnemigoVista.h  EfectoExplosionJefeVista.cpp  EfectoExplosionJefeVista.h  EfectoExplosionPersonajeVista.cpp  EfectoExplosionPersonajeVista.h  EfectoVelocidadVista.h  JuegoSonido.cpp  JuegoSonido.h  JuegoVista.cpp  JuegoVista.h  ProyectilVista.cpp  PuntajeVista.cpp  UIPersonajeVista.cpp
TerceraEntrega/TP3_Servidor/: CMakeLists.txt  main.cpp
TerceraEntrega/TP3_Servidor/data/: config_default.json
TerceraEntrega/TP3_Servidor/src/controlador/: ControladorJuego.cpp  ControladorJuego.h  ControladorServidor.cpp  ControladorServidor.h
TerceraEntrega/TP3_Servidor/src/modelo/juego/: Armamento.cpp  Armamento.h  ArmamentoEnemigo.cpp  ArmamentoEnemigo.h  ArmamentoJefe1.cpp  ArmamentoJefe1.h  Colisionador.cpp  Colisionador.h  Enemigo.cpp  Enemigo.h  IChocable.h  Jefe1.cpp  Jefe1.h  JefeBase.cpp  JefeBase.h  Juego.cpp  Juego.h  Nivel.cpp  Nivel.h  Personaje.cpp  Personaje.h  Posicion.cpp  Posicion.h  Proyectil.cpp  Proyectil.h  Ventana.cpp  Ventana.h
TerceraEntrega/TP3_Servidor/src/modelo/servidor/: Cliente.cpp  Cliente.h  Servidor.cpp  Servidor.h
TerceraEntrega/TP3_Servidor/src/tools/: CargadorDeConfiguracion.cpp  CargadorDeConfiguracion.h  Log.cpp  Log.h  SDL_Utils.cpp  SDL_Utils.h  SerializadorEstado.cpp  SerializadorEstado.h  Timestamp.cpp  Timestamp.h  Utils.cpp  Utils.h
TerceraEntrega/TP3_Servidor/src/tools/constantes/: ConstantesComunicacion.h  ConstantesEnemigos.h  ConstantesGenerales.h  ConstantesJson.cpp  ConstantesJson.h  ConstantesLog.h  ConstantesMensajes.h  ConstantesModelo.h  (+3 more)
(+22 files in other folders)
